[package]
name = "grpcalc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpcalc"
path = "src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["generate-wrappers", "calculator"]
generate-wrappers = []

# NOTE: add features here.
calculator = []



[dependencies]
tonic = "0.10.2"
tonic-reflection = "0.10.2"
prost = "0.12.1"
prost-types = "0.12.1"
serde = { version = "1.0.192", features = ["derive"] }
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }



[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"
syn = "2.0.39"
prettyplease = "0.2.15"
quote = "1.0.33"
proc-macro2 = { version = "1.0.69", default-features = false }
